testsuite/tests/checks/address_specifications_for_local_objects/test.out
address_specifications_for_local_objects.adb:3:7: error: address specifications for local object
3 |       Tmp : Integer with Address =>
  |       ^^^ 

